@@ -1,76 +1,0 @@
-/* VMPackage.java -- VM Specific Package methods
-   Copyright (C) 2005 Free Software Foundation
-
-This file is part of GNU Classpath.
-
-GNU Classpath is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2, or (at your option)
-any later version.
-
-GNU Classpath is distributed in the hope that it will be useful, but
-WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with GNU Classpath; see the file COPYING.  If not, write to the
-Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
-02110-1301 USA.
-
-Linking this library statically or dynamically with other modules is
-making a combined work based on this library.  Thus, the terms and
-conditions of the GNU General Public License cover the whole
-combination.
-
-As a special exception, the copyright holders of this library give you
-permission to link this library with independent modules to produce an
-executable, regardless of the license terms of these independent
-modules, and to copy and distribute the resulting executable under
-terms of your choice, provided that you also meet, for each linked
-independent module, the terms and conditions of the license of that
-module.  An independent module is a module which is not derived from
-or based on this library.  If you modify this library, you may extend
-this exception to your version of the library, but you are not
-obligated to do so.  If you do not wish to do so, delete this
-exception statement from your version. */
-
-package java.lang;
-
-import java.lang.annotation.Annotation;
-
-/*
- * This class is a reference version, mainly for compiling a class library
- * jar.  It is likely that VM implementers replace this with their own
- * version that can communicate effectively with the VM.
- */
-
-/**
- * This class provides static methods to be implemented by a VM in order
- * to support the full functionality of the <code>Package</code> class.
- *
- * @author Andrew John Hughes (gnu_andrew@member.fsf.org)
- */
-final class VMPackage
-{
-
-  // Only static methods. Cannot be instantiated.
-  private VMPackage()
-  {
-  }
-
-  /**
-   * Returns all annotations directly defined by the specified package.  If
-   * there are no annotations associated with this package, then a zero-length
-   * array will be returned.  The returned array may be modified by the client
-   * code, but this will have no effect on the annotation content of this
-   * class, and hence no effect on the return value of this method for
-   * future callers.
-   *
-   * @param pack the package whose annotations should be returned.
-   * @return the annotations directly defined by the specified package.
-   * @since 1.5
-   */
-  static native Annotation[] getDeclaredAnnotations(Package pack);
-
-} // class VMPackage
